force-app/main/default/objects/Case/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests_ComplaintsUuIi</relationshipName>
    <type>Lookup</type>
</CustomField>