force-app/main/default/objects/Case/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests_Complaints6</relationshipName>
    <type>Lookup</type>
</CustomField>