force-app/main/default/objects/Case/fields/Approver4__c.field-meta.xml
<CustomField>
    <fullName>Approver4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests_Complaints7</relationshipName>
    <type>Lookup</type>
</CustomField>