force-app/main/default/objects/Case/fields/Business_Performance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Performance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Performance Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests_Complaints9</relationshipName>
    <type>Lookup</type>
</CustomField>