force-app/main/default/objects/Case/fields/Car_Trailer_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Trailer_Number__c</fullName>
    <label>Car/Trailer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>