force-app/main/default/objects/Case/fields/Case_closed_user__c.field-meta.xml
<CustomField>
    <fullName>Case_closed_user__c</fullName>
    <label>Case closed user</label>
    <length>18</length>
    <type>Text</type>
</CustomField>