force-app/main/default/objects/Case/fields/ComplaintERPNumber__c.field-meta.xml
<CustomField>
    <fullName>ComplaintERPNumber__c</fullName>
    <label>ERP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>