force-app/main/default/objects/Case/fields/Contact_Data_Privacy_Consent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Data_Privacy_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Data Privacy Consent</label>
    <type>Checkbox</type>
</CustomField>