force-app/main/default/objects/Case/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>