force-app/main/default/objects/Case/fields/Contact_Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Contact_Job_Position__c</fullName>
    <label>Contact Job Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>