force-app/main/default/objects/Case/fields/Contact_Marketing_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact_Marketing_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Marketing Opt-Out</label>
    <type>Checkbox</type>
</CustomField>