force-app/main/default/objects/Case/fields/Correct_Car_Truck_Number__c.field-meta.xml
<CustomField>
    <fullName>Correct_Car_Truck_Number__c</fullName>
    <label>Correct Car/Truck Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>