force-app/main/default/objects/Case/fields/Credit_Rebill__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rebill__c</fullName>
    <label>Credit Rebill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>