force-app/main/default/objects/Case/fields/Credit_Timing__c.field-meta.xml
<CustomField>
    <fullName>Credit_Timing__c</fullName>
    <label>Credit Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Credit</fullName>
            </value>
            <value>
                <fullName>Credit to be issued late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>