force-app/main/default/objects/Case/fields/CSTeamInCharge__c.field-meta.xml
<CustomField>
    <fullName>CSTeamInCharge__c</fullName>
    <label>CS Team In Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AluminatesFos</fullName>
            </value>
            <value>
                <fullName>Andersonville</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Beyrede</fullName>
            </value>
            <value>
                <fullName>Clerac &amp; IRMIS</fullName>
            </value>
            <value>
                <fullName>Domodossola</fullName>
            </value>
            <value>
                <fullName>Glomel</fullName>
            </value>
            <value>
                <fullName>Greeneville</fullName>
            </value>
            <value>
                <fullName>Laufenburg</fullName>
            </value>
            <value>
                <fullName>Teutschental</fullName>
            </value>
            <value>
                <fullName>Villach &amp; Ruse</fullName>
            </value>
            <value>
                <fullName>Vizag (Accpac)</fullName>
            </value>
            <value>
                <fullName>Zschornewitz</fullName>
            </value>
            <value>
                <fullName>MinasTest</fullName>
            </value>
            <value>
                <fullName>Test1</fullName>
                <isActive>false</isActive>
                <label>Test1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>