force-app/main/default/objects/Case/fields/Customer_Service_Department__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Department__c</fullName>
    <label>Customer Service Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ManufacturingImerysPlants</valueSetName>
    </valueSet>
</CustomField>