force-app/main/default/objects/Case/fields/Duvall_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Duvall_Email_1__c</fullName>
    <label>Duvall Email 1</label>
    <type>Email</type>
</CustomField>