force-app/main/default/objects/Case/fields/Duvall_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Duvall_Email_2__c</fullName>
    <label>Duvall Email 2</label>
    <type>Email</type>
</CustomField>