force-app/main/default/objects/Case/fields/ERP_Rebill_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Rebill_Number__c</fullName>
    <label>ERP Rebill Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>