force-app/main/default/objects/Case/fields/Gatekeeper_Assignment_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Gatekeeper_Assignment_Record_Link__c</fullName>
    <label>Gatekeeper Assignment Record Link</label>
    <type>Url</type>
</CustomField>