force-app/main/default/objects/Case/fields/Has_the_equipment_number_been_updated_in__c.field-meta.xml
<CustomField>
    <fullName>Has_the_equipment_number_been_updated_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has equipment number been updated in AX</label>
    <type>Checkbox</type>
</CustomField>