force-app/main/default/objects/Case/fields/Imerys_Manufacturing_Plant1__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Manufacturing_Plant1__c</fullName>
    <label>Imerys Manufacturing Plant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>