force-app/main/default/objects/Case/fields/Imerys_Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Manufacturing_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imerys Manufacturing Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Imerys_Site__c.ImerysManufacturingPlant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Imerys_Site__c</referenceTo>
    <relationshipLabel>Requests &amp; Complaints (Imerys Manufacturing Plant)</relationshipLabel>
    <relationshipName>Requests_Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>