force-app/main/default/objects/Case/fields/Incorrect_Car_Truck_Number__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Car_Truck_Number__c</fullName>
    <label>Incorrect Car/Truck Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>