force-app/main/default/objects/Case/fields/J_M_Email_2__c.field-meta.xml
<CustomField>
    <fullName>J_M_Email_2__c</fullName>
    <label>J&amp;M Email 2</label>
    <type>Email</type>
</CustomField>