force-app/main/default/objects/Case/fields/Net_Credit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Net_Credit_Requested__c</fullName>
    <formula>Requested_Credit_amount__c  -  Rebill_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Credit Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>