force-app/main/default/objects/Case/fields/No_of_pallets_cut_on_load__c.field-meta.xml
<CustomField>
    <fullName>No_of_pallets_cut_on_load__c</fullName>
    <label>No.of pallets cut on load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>