force-app/main/default/objects/Case/fields/Product_Grade__c.field-meta.xml
<CustomField>
    <fullName>Product_Grade__c</fullName>
    <label>Product Grade</label>
    <length>254</length>
    <type>Text</type>
</CustomField>