force-app/main/default/objects/Case/fields/ProductionPlant__c.field-meta.xml
<CustomField>
    <fullName>ProductionPlant__c</fullName>
    <formula>ProductName__r.ImerysManufacturingPlant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imerys Manufacturing Plant</label>
    <type>Text</type>
</CustomField>