force-app/main/default/objects/Case/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Requests &amp; Complaints</relationshipLabel>
    <relationshipName>Requests_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>