force-app/main/default/objects/Case/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Requests &amp; Complaints</relationshipLabel>
    <relationshipName>Requests_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>