force-app/main/default/objects/Case/fields/Rail_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Rail_Email_1__c</fullName>
    <label>Rail Email 1</label>
    <type>Email</type>
</CustomField>