force-app/main/default/objects/Case/fields/Rail_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Rail_Email_2__c</fullName>
    <label>Rail Email 2</label>
    <type>Email</type>
</CustomField>