force-app/main/default/objects/Case/fields/Rail_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Rail_Email_3__c</fullName>
    <label>Rail Email 3</label>
    <type>Email</type>
</CustomField>