force-app/main/default/objects/Case/fields/Railcar_Number__c.field-meta.xml
<CustomField>
    <fullName>Railcar_Number__c</fullName>
    <label>Railcar Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>