force-app/main/default/objects/Case/fields/Rebill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rebill_Amount__c</fullName>
    <label>Rebill Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>