force-app/main/default/objects/Case/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests &amp; Complaints</relationshipLabel>
    <relationshipName>Requests_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>