force-app/main/default/objects/Case/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests &amp; Complaints</relationshipLabel>
    <relationshipName>Requests_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>