force-app/main/default/objects/Case/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests_Complaints8</relationshipName>
    <type>Lookup</type>
</CustomField>