force-app/main/default/objects/Case/fields/Season_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Season_Email_3__c</fullName>
    <label>Season Email 3</label>
    <type>Email</type>
</CustomField>