force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal wear</fullName>
            </value>
            <value>
                <fullName>Administration - Others</fullName>
            </value>
            <value>
                <fullName>Appearance/Color</fullName>
            </value>
            <value>
                <fullName>Application performance</fullName>
            </value>
            <value>
                <fullName>ASMF/CEP</fullName>
            </value>
            <value>
                <fullName>Break out</fullName>
            </value>
            <value>
                <fullName>Commercial documentation (customs...)</fullName>
            </value>
            <value>
                <fullName>Contamination/Foreign bodies</fullName>
            </value>
            <value>
                <fullName>Cracks or other defects</fullName>
            </value>
            <value>
                <fullName>Credit management</fullName>
            </value>
            <value>
                <fullName>CSR Questionnaire</fullName>
            </value>
            <value>
                <fullName>Customer Compliance Questionnaire</fullName>
            </value>
            <value>
                <fullName>Customer relationship (communication/ reactivity)</fullName>
            </value>
            <value>
                <fullName>Damaged packaging</fullName>
            </value>
            <value>
                <fullName>Dimensional problems, non-conformity to plan or origin</fullName>
            </value>
            <value>
                <fullName>Dirty packaging</fullName>
            </value>
            <value>
                <fullName>Driver behaviour</fullName>
            </value>
            <value>
                <fullName>Environmental (spills, dust)</fullName>
            </value>
            <value>
                <fullName>Food Additives Non--US</fullName>
            </value>
            <value>
                <fullName>Food Additives US</fullName>
            </value>
            <value>
                <fullName>Food Contact Non-US</fullName>
            </value>
            <value>
                <fullName>Food Contact US</fullName>
            </value>
            <value>
                <fullName>Furnace collapse</fullName>
            </value>
            <value>
                <fullName>Hotspots</fullName>
            </value>
            <value>
                <fullName>Identification, labelling, marking</fullName>
            </value>
            <value>
                <fullName>Installation service (HTS) - Before operation issues (explosion, etc.)</fullName>
                <label>Installation service - Before operation issues (explosion, etc.)</label>
            </value>
            <value>
                <fullName>Installation service (HTS) - Dimensional problems</fullName>
                <label>Installation service - Dimensional problems</label>
            </value>
            <value>
                <fullName>Installation service (HTS) - Dry-out/heating up issues</fullName>
                <label>Installation service - Dry-out/heating up issues</label>
            </value>
            <value>
                <fullName>Installation service (HTS) - Poor/Missing equipment</fullName>
                <label>Installation service - Poor/Missing equipment</label>
            </value>
            <value>
                <fullName>Installation service (HTS) - Poor engineering</fullName>
                <label>Installation service - Poor engineering</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>