force-app/main/default/objects/Case/fields/Tech_NoOfCorrectiveAction__c.field-meta.xml
<CustomField>
    <fullName>Tech_NoOfCorrectiveAction__c</fullName>
    <label>Tech No Of Corrective Action</label>
    <summaryForeignKey>CorrectiveAction__c.RelatedComplaint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>