force-app/main/default/objects/Case/fields/TECH_Response_complete__c.field-meta.xml
<CustomField>
    <fullName>TECH_Response_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_Response complete</label>
    <type>Checkbox</type>
</CustomField>