force-app/main/default/objects/Case/fields/Tons_to_cancel_credit__c.field-meta.xml
<CustomField>
    <fullName>Tons_to_cancel_credit__c</fullName>
    <label>Tons to cancel/credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>