force-app/main/default/objects/Case/fields/Truck_Email__c.field-meta.xml
<CustomField>
    <fullName>Truck_Email__c</fullName>
    <label>Truck Email</label>
    <type>Email</type>
</CustomField>