force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode_of_Transport__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck Detention</fullName>
            </value>
            <value>
                <fullName>Truck Turnaway</fullName>
            </value>
            <value>
                <fullName>Cut pallets</fullName>
            </value>
            <value>
                <fullName>Weight Discrepancies</fullName>
            </value>
            <value>
                <fullName>Incorrect Car Number</fullName>
            </value>
            <value>
                <fullName>Cancel Rail billing - Credit instruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>