force-app/main/default/objects/Case/fields/Updated_Gross__c.field-meta.xml
<CustomField>
    <fullName>Updated_Gross__c</fullName>
    <label>Updated Gross</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>