force-app/main/default/objects/Case/fields/Updated_Net__c.field-meta.xml
<CustomField>
    <fullName>Updated_Net__c</fullName>
    <label>Updated Net</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>