force-app/main/default/objects/Case/fields/Updated_Tare__c.field-meta.xml
<CustomField>
    <fullName>Updated_Tare__c</fullName>
    <label>Updated Tare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>