force-app/main/default/objects/Case/fields/Your_market__c.field-meta.xml
<CustomField>
    <fullName>Your_market__c</fullName>
    <inlineHelpText>Filled in by the Customer on the web form.</inlineHelpText>
    <label>Your Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrasives</fullName>
            </value>
            <value>
                <fullName>Adhesives, caulks &amp; sealants</fullName>
            </value>
            <value>
                <fullName>Advanced ceramics</fullName>
            </value>
            <value>
                <fullName>Animal care</fullName>
            </value>
            <value>
                <fullName>Batteries &amp; fuel cells</fullName>
            </value>
            <value>
                <fullName>Board, paper, packaging &amp; pulp</fullName>
            </value>
            <value>
                <fullName>Building materials</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>Component manufacturing</fullName>
            </value>
            <value>
                <fullName>Cosmetics &amp; personal care</fullName>
            </value>
            <value>
                <fullName>Crop production</fullName>
            </value>
            <value>
                <fullName>Energy &amp; environment</fullName>
            </value>
            <value>
                <fullName>Food &amp; beverage</fullName>
            </value>
            <value>
                <fullName>Friction materials</fullName>
            </value>
            <value>
                <fullName>Health, pharma &amp; biotechnology</fullName>
            </value>
            <value>
                <fullName>Home care</fullName>
            </value>
            <value>
                <fullName>Infrastructure &amp; utilities</fullName>
            </value>
            <value>
                <fullName>Investment casting</fullName>
            </value>
            <value>
                <fullName>Lubricants</fullName>
            </value>
            <value>
                <fullName>Paints &amp; coatings</fullName>
            </value>
            <value>
                <fullName>Pet care</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
            <value>
                <fullName>Refractory producers</fullName>
            </value>
            <value>
                <fullName>Rubber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>