force-app/main/default/objects/Case/validationRules/CSE_VR57_CorrectiveActionMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CSE_VR57_CorrectiveActionMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( BusinessArea__c , &apos;HTS&apos;) 
&amp;&amp;
(RecordType.DeveloperName = &apos;CSE_Complaint&apos; || RecordType.DeveloperName = &apos;Complaint_After_Creation_New&apos;)
&amp;&amp;
Tech_NoOfCorrectiveAction__c =0
&amp;&amp;
$User.ByPassValidationRule__c = FALSE
&amp;&amp;
(OR(ISPICKVAL( Status , &apos;Draft Creation&apos;),ISPICKVAL( Status , &apos;Registration&apos;),ISPICKVAL( Status , &apos;Investigation&apos;)))
&amp;&amp;
ISPICKVAL(IsComplaintJustified__c ,&apos;Justified&apos;)</errorConditionFormula>
    <errorMessage>Since the complaint is &apos;Justified&apos;, you need to create a Corrective action</errorMessage>
</ValidationRule>