force-app/main/default/objects/Case/validationRules/Manufacturing_Plant_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturing_Plant_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(frmRecordType__c = &apos;Customer_Issue&apos; ,NOT(ISBLANK( ProductName__c )),ISBLANK( Manufacturing_Plant__c ))</errorConditionFormula>
    <errorDisplayField>Manufacturing_Plant__c</errorDisplayField>
    <errorMessage>Manufacturing Plant is mandatory</errorMessage>
</ValidationRule>