force-app/main/default/objects/Case/validationRules/Zero_Rebill_Amount_not_accpeted.validationRule-meta.xml
<ValidationRule>
    <fullName>Zero_Rebill_Amount_not_accpeted</fullName>
    <active>true</active>
    <description>23-00002296</description>
    <errorConditionFormula>Credit_Rebill__c   = 0</errorConditionFormula>
    <errorMessage>Please enter a value other than 0 in rebill amount</errorMessage>
</ValidationRule>